--- a/css/agency.css
+++ b/css/agency.css
@@ -552,7 +552,7 @@ section h3.section-subheading {
     margin-left: -85px;
   }
   .timeline > li .timeline-image h4 {
-    margin-top: 50px;
+    margin-top: 55px;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 100px 20px 20px;
@@ -767,4 +767,12 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #fed136;
+}
+
+hr.fancy {
+	height: 20px;
+	margin-top: -20px;
+	border-style: solid;
+	border-color: #8c8b8b;
+	border-width: 2px 0 0 0;
 }
