--- a/css/agency.css
+++ b/css/agency.css
@@ -229,15 +229,25 @@ fieldset[disabled] .btn-xl.active {
     border-radius: 3px;
   }
 }
+.top-hidden {
+	display: none;
+	text-decoration: none;
+	color: #dab288;
+	font-family: "Dancing Script", "Helvetica Neue", Helvetica, Arial, cursive;
+	font-style: italic;
+	font-size: 25px;
+	color: #c4cdda;
+	line-height: 50px;
+	padding-left: 10px;
+}
 @media (min-width: 768px) {
   .navbar-custom.affix {
     background-color: #222222;
-    padding: 10px 0;
+    padding: 10px 0 ;
   }
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
   }
-}
 .top-hidden {
 	display: none;
 	text-decoration: none;
@@ -246,6 +256,7 @@ fieldset[disabled] .btn-xl.active {
 	font-style: italic;
 	font-size: 30px;
 	color: #c4cdda;
+}
 }
 header {
   background-image: url('../img/header-bg.jpg');
@@ -263,6 +274,9 @@ header .intro-text {
   padding-top: 50px;
   padding-bottom: 25px;
 }
+header .intro-spacing {
+	padding-bottom: 50px;
+}
 header .intro-text .intro-lead-in {
   font-family: /*"Droid Serif",*/ "Saira", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
@@ -274,9 +288,19 @@ header .intro-text .intro-heading {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 50px;
-  line-height: 100px;
+  font-size: 35px;
+  line-height: 40px;
   margin-bottom: 25px;
+}
+@media (min-width: 450px) {
+header .intro-text .intro-heading {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 50px;
+  margin-bottom: 25px;
+}
 }
 @media (min-width: 768px) {
   header .intro-text {
@@ -296,8 +320,8 @@ header .intro-text .intro-heading {
     text-transform: uppercase;
 	text-shadow: 2px 5px #201313; /*#14191f;*/
     font-weight: 700;
-    font-size: 75px;
-    line-height: 200px;
+    font-size: 70px;
+    line-height: 100px;
     margin-bottom: 50px;
   }
 }
@@ -775,4 +799,12 @@ hr.fancy {
 	border-style: solid;
 	border-color: #8c8b8b;
 	border-width: 2px 0 0 0;
+}
+
+.modal-body .modal-list ul {
+	text-align: left;
+}
+
+.modal-list {
+	margin-top: -20px;
 }
