--- a/css/general.css
+++ b/css/general.css
@@ -102,3 +102,26 @@ section h6.section-subheading {
 .timeline > li {
 	margin-bottom: -100px;
 }
+
+.list-subheading {
+	font-size: 16px;
+	font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	text-transform: none;
+	font-style: italic;
+	font-weight: 400;
+	margin-top: 25px;
+}
+.list-first {
+	margin-top: 15px;
+}
+.list-subheading ~ a {
+	font-style: italic;
+	font-weight: 300;
+	font-size: 14px;
+}
+.list-subheading ~ a:hover,
+.list-subheading ~ a:focus,
+.list-subheading ~ a:active,
+.list-subheading ~ a.active {
+	color: #c1a157;
+}
