--- a/css/general.css
+++ b/css/general.css
@@ -125,3 +125,25 @@ section h6.section-subheading {
 .list-subheading ~ a.active {
 	color: #c1a157;
 }
+
+.text-article {
+	font-size: 16px;
+	font-weight: 500;
+	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	margin-bottom: 25px;
+}
+.text-caption {
+	font-size: 14px;
+	color: #777777;
+	text-align: center;
+}
+.img-main {
+	max-width: 75%;
+	display: block;
+	margin: 0 auto;
+}
+
+pre code {
+	color: #777777; /* Line number colors */
+	text-align: left;
+}
