Created article "aside" functionality

--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,12 @@
+header {
+  border-style: solid;
+  border-bottom-width: 10px;
+  border-color: black;
+}
+.bg-paper {
+	background-image: url("../../img/map-image.png");
+}
+
 #mainNav {
   background-color: #222222;
   border-color: transparent;
@@ -132,11 +141,37 @@ section h6.section-subheading {
 	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin-bottom: 25px;
 }
+.text-no-bottom {
+	margin-bottom: 10px;
+}
 .text-caption {
 	font-size: 14px;
 	color: #777777;
 	text-align: center;
 }
+keyword {
+	/*font-style: italic;*/
+	font-weight: 600;
+}
+aside {
+	/*position: absolute;*/
+	margin: 0 auto;
+	background: /*#1c4563*/#fdf6e3;
+	color: #657b83;
+	padding-left: 10px;
+	padding-right: 5px;
+	padding-bottom: 5px;
+	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	border-color: #eee8d5;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 1px;
+}
+aside h4,
+aside h5 {
+	text-transform: none;
+}
+
 .img-main {
 	max-width: 75%;
 	display: block;
