--- a/css/general.css
+++ b/css/general.css
@@ -59,6 +59,15 @@ header {
   }
 }
 
+.text-indented {
+	padding-left: 20px;
+}
+@media (min-width: 768px) {
+	.text-indented {
+		padding-left: 50px;
+	}
+}
+
 section {
 	padding: 100px 0 50px 0;
 }
