--- a/css/agency.css
+++ b/css/agency.css
@@ -832,3 +832,10 @@ hr.fancy {
 .modal-list {
 	margin-top: -20px;
 }
+
+.w3wm-half {
+	background-image: url("../img/portfolio/w3wm_Preview.gif");
+	background-size: 100% 100%;
+	height: 290px;
+	width: 554px;
+}
