--- a/css/agency.css
+++ b/css/agency.css
@@ -839,3 +839,10 @@ hr.fancy {
 	height: 290px;
 	width: 554px;
 }
+
+.w3wm-third {
+	background-image: url("../img/portfolio/w3wm_Preview.gif");
+	background-size: 100% 100%;
+	height: 250px;
+	width: 350px;
+}
